--- a/pom.xml
+++ b/pom.xml
@@ -111,10 +111,14 @@
 </dependency>
         
         <dependency>
-
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 			<version>2.4.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
         
         <dependency>
